Index Page - Link to project

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
   <h1>Hello World</h1>
+  <a href="project_EventManagement/client/index.html">
+                                    Event Management Project
+                                </a>
 <body>
 </html>
