--- a/project_EventManagement/client/index.html
+++ b/project_EventManagement/client/index.html
@@ -15,7 +15,7 @@
         <link href='https://fonts.googleapis.com/css?family=Raleway:400,800,600' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-        <script src="http://mymaplist.com/js/vendor/TweenLite.min.js"></script>
+        <script src="https://mymaplist.com/js/vendor/TweenLite.min.js"></script>
         <!-- SPELLS -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
