Angular Integration to app

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                 </div>
                                 <figcaption>
                                 <h4>
-                                <a href="clientSurvey/survey.html">
+                                <a href="clientSurvey/index.html">
                                     Let's do the Assessment
                                 </a>
                                 </h4>
