Added Start Survey Page

--- a/clientSurvey/index.html
+++ b/clientSurvey/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="icon" type="image/png" href="../assets/images/favicon.png">
-        <title>SS</title>
+        <title>Survey</title>
         <!-- Mobile Specific Metas
         ================================================== -->
         <meta name="format-detection" content="telephone=no">
@@ -39,7 +39,6 @@
         <!-- jquery -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
-        <script src="scripts/dirPagination.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
         <!-- owl carouserl js -->
 
@@ -55,6 +54,8 @@
         <!-- template main js -->
         <script src="app.js"></script>
         <script src="config.js"></script>
+        <script src="views/survey/qualifier.controller.js"></script>
+        <script src="views/survey/startSurvey.controller.js"></script>
 
 
 
