Calculation Logic for output

--- a/clientSurvey/index.html
+++ b/clientSurvey/index.html
@@ -56,7 +56,10 @@
         <script src="config.js"></script>
         <script src="views/survey/qualifier.controller.js"></script>
         <script src="views/survey/startSurvey.controller.js"></script>
-
+        <script src="views/survey/section1.controller.js"></script>
+        <script src="views/survey/section2.controller.js"></script>
+        <script src="views/survey/output.controller.js"></script>
+        <script src="services/cloudService.js"></script>
 
 
     </head>
