--- a/clientSurvey/index.html
+++ b/clientSurvey/index.html
@@ -122,28 +122,28 @@
             <footer id="footer">
                 <div class="container">
                     <div class="col-md-8">
-                        <p class="copyright">Copyright: <span>2015</span> . Design and Developed by Survi Singh</p>
+                        <p class="copyright">Copyright: <span>2015</span> . Design and Developed by Timer</p>
                     </div>
                     <div class="col-md-4">
                         <!-- Social Media -->
                         <ul class="social">
                             <li>
-                                <a href="http://wwww.fb.com/themefisher" class="Facebook">
+                                <a href="http://wwww.facebook.com" class="Facebook">
                                     <i class="ion-social-facebook"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="http://wwww.twitter.com/themefisher" class="Twitter">
+                                <a href="http://www.twitter.com" class="Twitter">
                                     <i class="ion-social-twitter"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="Linkedin">
+                                <a href="https://www.linkedin.com" class="Linkedin">
                                     <i class="ion-social-linkedin"></i>
                                 </a>
                             </li>
                             <li>
-                                <a href="http://wwww.fb.com/themefisher" class="Google Plus">
+                                <a href="https://plus.google.com/" class="Google Plus">
                                     <i class="ion-social-googleplus"></i>
                                 </a>
                             </li>
