integrated code 20 april 2017

--- a/clientSurvey/index.html
+++ b/clientSurvey/index.html
@@ -55,11 +55,16 @@
         <script src="app.js"></script>
         <script src="config.js"></script>
         <script src="views/survey/qualifier.controller.js"></script>
+        <script src="views/survey/general.controller.js"></script>
         <script src="views/survey/startSurvey.controller.js"></script>
         <script src="views/survey/section1.controller.js"></script>
         <script src="views/survey/section2.controller.js"></script>
+        <script src="views/survey/section3.controller.js"></script>
         <script src="views/survey/output.controller.js"></script>
         <script src="services/cloudService.js"></script>
+        <script src="services/dbService.js"></script>
+        <script src="services/frameworkService.js"></script>
+
 
 
     </head>
